Use base::flat_set in gfx::AnimationController and improve GetMinInterval logic.

This change is in response to profiling when stress testing the browser with an extremely large session restore profile containing 1691 tabs.

Profiling indicated that most time was spent in constructing/destroying/updating/iterating over the std::set. Replacing this with a base::flat_set improves performance enormously, even for 100s to 1000s of simultaneous animations (which is very rare).

Profiling then indicated that the linear scan logic of GetMinInterval consumed a lot of time as each animation finished. Since most animations in a container occur with the same update interval updating this to count the number of elements sharing the same interval makes the common case O(1) rather than O(n). It is possible to further refine this with a secondary map of (update_interval -> element_count) which would make the rare case O(lg n) and the common case O(1), however the additional code and storage complexity didn't yeild any tangible further benefit.

The session restore stress test improved from ~55s on a (powerful) dev machine to ~4s (~12x).

BUG=753897

Change-Id: I1c0b2e4365baeb5a0c9cbcfee174f1fda34c4361